// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spotlight Dialog metaspaces should show metaspace favourites-space 1`] = `
<DocumentFragment>
  <div
    id="mx_SpotlightDialog_keyboardPrompt"
  >
    <span>
      Use 
      <kbd>
        ↓
      </kbd>
      <kbd>
        ↑
      </kbd>
       to scroll
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-label="Search Dialog"
    class="mx_SpotlightDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    />
    <div
      class="mx_SpotlightDialog_searchBox mx_textinput"
    >
      <input
        aria-activedescendant="mx_SpotlightDialog_button_result_Favourites"
        aria-describedby="mx_SpotlightDialog_keyboardPrompt"
        aria-label="Search"
        aria-owns="mx_SpotlightDialog_content"
        autocapitalize="off"
        autocomplete="off"
        autocorrect="off"
        placeholder="Search"
        spellcheck="false"
        type="text"
        value="favourites"
      />
    </div>
    <div
      aria-activedescendant="mx_SpotlightDialog_button_result_Favourites"
      aria-describedby="mx_SpotlightDialog_keyboardPrompt"
      id="mx_SpotlightDialog_content"
      role="listbox"
    >
      <div
        aria-labelledby="mx_SpotlightDialog_section_spaces"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_results"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_spaces"
        >
          Spaces you're in
        </h4>
        <div>
          <li
            aria-selected="true"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_result_Favourites"
            role="option"
            tabindex="-1"
          >
            <div
              class="mx_SpotlightDialog_metaspaceResult"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.905 9.378 12 5.52l-1.905 3.86-4.259.618 3.082 3.004-.727 4.242L12 15.24l3.81 2.003-.728-4.242 3.082-3.004zM8.767 7.55l2.336-4.733a1 1 0 0 1 1.794 0l2.336 4.733 5.223.76a1 1 0 0 1 .555 1.705L17.23 13.7l.892 5.202a1 1 0 0 1-1.45 1.054L12 17.5l-4.672 2.456a1 1 0 0 1-1.451-1.054l.892-5.202-3.78-3.685a1 1 0 0 1 .555-1.706z"
                />
              </svg>
            </div>
            Favourites
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
      <div
        class="mx_SpotlightDialog_section mx_SpotlightDialog_hiddenResults"
        role="group"
      >
        <h4>
          Some results may be hidden for privacy
        </h4>
        <div
          class="mx_SpotlightDialog_otherSearches_messageSearchText"
        >
          If you can't see who you're looking for, send them your invite link.
        </div>
        <div
          aria-label="Copy"
          aria-selected="false"
          class="mx_AccessibleButton mx_SpotlightDialog_inviteLink mx_SpotlightDialog_option"
          id="mx_SpotlightDialog_button_inviteLink"
          role="option"
          tabindex="-1"
        >
          <span
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
              />
            </svg>
            Copy invite link
          </span>
        </div>
      </div>
      <div
        aria-labelledby="mx_SpotlightDialog_section_groupChat"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_otherSearches"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_groupChat"
        >
          Other options
        </h4>
        <li
          aria-selected="false"
          class="mx_AccessibleButton mx_SpotlightDialog_option"
          id="mx_SpotlightDialog_button_startGroupChat"
          role="option"
          tabindex="-1"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1 17.2q0-.85.438-1.562.437-.713 1.162-1.088a14.8 14.8 0 0 1 3.15-1.163A13.8 13.8 0 0 1 9 13q1.65 0 3.25.387 1.6.388 3.15 1.163.724.375 1.162 1.087Q17 16.35 17 17.2v.8q0 .824-.587 1.413A1.93 1.93 0 0 1 15 20H3q-.824 0-1.412-.587A1.93 1.93 0 0 1 1 18zM21 20h-2.55q.274-.45.413-.962Q19 18.525 19 18v-1q0-1.1-.613-2.113-.612-1.012-1.737-1.737 1.275.15 2.4.512 1.125.363 2.1.888.9.5 1.375 1.112T23 17v1q0 .824-.587 1.413A1.93 1.93 0 0 1 21 20M9 12q-1.65 0-2.825-1.175T5 8t1.175-2.825T9 4t2.825 1.175T13 8t-1.175 2.825T9 12m10-4q0 1.65-1.175 2.825T15 12q-.275 0-.7-.062a6 6 0 0 1-.7-.138 6 6 0 0 0 1.037-1.775Q15 9.05 15 8t-.363-2.025A6 6 0 0 0 13.6 4.2a3 3 0 0 1 .7-.163Q14.65 4 15 4q1.65 0 2.825 1.175T19 8M3 18h12v-.8a.97.97 0 0 0-.5-.85q-1.35-.675-2.725-1.012a11.6 11.6 0 0 0-5.55 0Q4.85 15.675 3.5 16.35a.97.97 0 0 0-.5.85zm6-8q.825 0 1.412-.588Q11 8.826 11 8q0-.824-.588-1.412A1.93 1.93 0 0 0 9 6q-.825 0-1.412.588A1.93 1.93 0 0 0 7 8q0 .825.588 1.412Q8.175 10 9 10"
            />
          </svg>
          Start a group chat
          <div
            class="mx_SpotlightDialog_option--endAdornment"
          >
            <kbd
              aria-hidden="true"
              class="mx_SpotlightDialog_enterPrompt"
            >
              ↵
            </kbd>
          </div>
        </li>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Spotlight Dialog metaspaces should show metaspace home-space 1`] = `
<DocumentFragment>
  <div
    id="mx_SpotlightDialog_keyboardPrompt"
  >
    <span>
      Use 
      <kbd>
        ↓
      </kbd>
      <kbd>
        ↑
      </kbd>
       to scroll
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-label="Search Dialog"
    class="mx_SpotlightDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    />
    <div
      class="mx_SpotlightDialog_searchBox mx_textinput"
    >
      <input
        aria-activedescendant="mx_SpotlightDialog_button_result_Home"
        aria-describedby="mx_SpotlightDialog_keyboardPrompt"
        aria-label="Search"
        aria-owns="mx_SpotlightDialog_content"
        autocapitalize="off"
        autocomplete="off"
        autocorrect="off"
        placeholder="Search"
        spellcheck="false"
        type="text"
        value="home"
      />
    </div>
    <div
      aria-activedescendant="mx_SpotlightDialog_button_result_Home"
      aria-describedby="mx_SpotlightDialog_keyboardPrompt"
      id="mx_SpotlightDialog_content"
      role="listbox"
    >
      <div
        aria-labelledby="mx_SpotlightDialog_section_spaces"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_results"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_spaces"
        >
          Spaces you're in
        </h4>
        <div>
          <li
            aria-selected="true"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_result_Home"
            role="option"
            tabindex="-1"
          >
            <div
              class="mx_SpotlightDialog_metaspaceResult"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 11v8h3V9.177l-7-3.889-7 3.889V19h3v-8zm-6 10H5a2 2 0 0 1-2-2V9.177a2 2 0 0 1 1.029-1.748l7-3.89a2 2 0 0 1 1.942 0l7 3.89A2 2 0 0 1 21 9.177V19a2 2 0 0 1-2 2h-5v-8h-4z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            Home
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
      <div
        class="mx_SpotlightDialog_section mx_SpotlightDialog_hiddenResults"
        role="group"
      >
        <h4>
          Some results may be hidden for privacy
        </h4>
        <div
          class="mx_SpotlightDialog_otherSearches_messageSearchText"
        >
          If you can't see who you're looking for, send them your invite link.
        </div>
        <div
          aria-label="Copy"
          aria-selected="false"
          class="mx_AccessibleButton mx_SpotlightDialog_inviteLink mx_SpotlightDialog_option"
          id="mx_SpotlightDialog_button_inviteLink"
          role="option"
          tabindex="-1"
        >
          <span
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
              />
            </svg>
            Copy invite link
          </span>
        </div>
      </div>
      <div
        aria-labelledby="mx_SpotlightDialog_section_groupChat"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_otherSearches"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_groupChat"
        >
          Other options
        </h4>
        <li
          aria-selected="false"
          class="mx_AccessibleButton mx_SpotlightDialog_option"
          id="mx_SpotlightDialog_button_startGroupChat"
          role="option"
          tabindex="-1"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1 17.2q0-.85.438-1.562.437-.713 1.162-1.088a14.8 14.8 0 0 1 3.15-1.163A13.8 13.8 0 0 1 9 13q1.65 0 3.25.387 1.6.388 3.15 1.163.724.375 1.162 1.087Q17 16.35 17 17.2v.8q0 .824-.587 1.413A1.93 1.93 0 0 1 15 20H3q-.824 0-1.412-.587A1.93 1.93 0 0 1 1 18zM21 20h-2.55q.274-.45.413-.962Q19 18.525 19 18v-1q0-1.1-.613-2.113-.612-1.012-1.737-1.737 1.275.15 2.4.512 1.125.363 2.1.888.9.5 1.375 1.112T23 17v1q0 .824-.587 1.413A1.93 1.93 0 0 1 21 20M9 12q-1.65 0-2.825-1.175T5 8t1.175-2.825T9 4t2.825 1.175T13 8t-1.175 2.825T9 12m10-4q0 1.65-1.175 2.825T15 12q-.275 0-.7-.062a6 6 0 0 1-.7-.138 6 6 0 0 0 1.037-1.775Q15 9.05 15 8t-.363-2.025A6 6 0 0 0 13.6 4.2a3 3 0 0 1 .7-.163Q14.65 4 15 4q1.65 0 2.825 1.175T19 8M3 18h12v-.8a.97.97 0 0 0-.5-.85q-1.35-.675-2.725-1.012a11.6 11.6 0 0 0-5.55 0Q4.85 15.675 3.5 16.35a.97.97 0 0 0-.5.85zm6-8q.825 0 1.412-.588Q11 8.826 11 8q0-.824-.588-1.412A1.93 1.93 0 0 0 9 6q-.825 0-1.412.588A1.93 1.93 0 0 0 7 8q0 .825.588 1.412Q8.175 10 9 10"
            />
          </svg>
          Start a group chat
          <div
            class="mx_SpotlightDialog_option--endAdornment"
          >
            <kbd
              aria-hidden="true"
              class="mx_SpotlightDialog_enterPrompt"
            >
              ↵
            </kbd>
          </div>
        </li>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Spotlight Dialog metaspaces should show metaspace people-space 1`] = `
<DocumentFragment>
  <div
    id="mx_SpotlightDialog_keyboardPrompt"
  >
    <span>
      Use 
      <kbd>
        ↓
      </kbd>
      <kbd>
        ↑
      </kbd>
       to scroll
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-label="Search Dialog"
    class="mx_SpotlightDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    />
    <div
      class="mx_SpotlightDialog_searchBox mx_textinput"
    >
      <input
        aria-activedescendant="mx_SpotlightDialog_button_result_People"
        aria-describedby="mx_SpotlightDialog_keyboardPrompt"
        aria-label="Search"
        aria-owns="mx_SpotlightDialog_content"
        autocapitalize="off"
        autocomplete="off"
        autocorrect="off"
        placeholder="Search"
        spellcheck="false"
        type="text"
        value="people"
      />
    </div>
    <div
      aria-activedescendant="mx_SpotlightDialog_button_result_People"
      aria-describedby="mx_SpotlightDialog_keyboardPrompt"
      id="mx_SpotlightDialog_content"
      role="listbox"
    >
      <div
        aria-labelledby="mx_SpotlightDialog_section_spaces"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_results"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_spaces"
        >
          Spaces you're in
        </h4>
        <div>
          <li
            aria-selected="true"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_result_People"
            role="option"
            tabindex="-1"
          >
            <div
              class="mx_SpotlightDialog_metaspaceResult"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
                />
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
                />
                <path
                  d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
                />
              </svg>
            </div>
            People
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
      <div
        class="mx_SpotlightDialog_section mx_SpotlightDialog_hiddenResults"
        role="group"
      >
        <h4>
          Some results may be hidden for privacy
        </h4>
        <div
          class="mx_SpotlightDialog_otherSearches_messageSearchText"
        >
          If you can't see who you're looking for, send them your invite link.
        </div>
        <div
          aria-label="Copy"
          aria-selected="false"
          class="mx_AccessibleButton mx_SpotlightDialog_inviteLink mx_SpotlightDialog_option"
          id="mx_SpotlightDialog_button_inviteLink"
          role="option"
          tabindex="-1"
        >
          <span
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
              />
            </svg>
            Copy invite link
          </span>
        </div>
      </div>
      <div
        aria-labelledby="mx_SpotlightDialog_section_groupChat"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_otherSearches"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_groupChat"
        >
          Other options
        </h4>
        <li
          aria-selected="false"
          class="mx_AccessibleButton mx_SpotlightDialog_option"
          id="mx_SpotlightDialog_button_startGroupChat"
          role="option"
          tabindex="-1"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1 17.2q0-.85.438-1.562.437-.713 1.162-1.088a14.8 14.8 0 0 1 3.15-1.163A13.8 13.8 0 0 1 9 13q1.65 0 3.25.387 1.6.388 3.15 1.163.724.375 1.162 1.087Q17 16.35 17 17.2v.8q0 .824-.587 1.413A1.93 1.93 0 0 1 15 20H3q-.824 0-1.412-.587A1.93 1.93 0 0 1 1 18zM21 20h-2.55q.274-.45.413-.962Q19 18.525 19 18v-1q0-1.1-.613-2.113-.612-1.012-1.737-1.737 1.275.15 2.4.512 1.125.363 2.1.888.9.5 1.375 1.112T23 17v1q0 .824-.587 1.413A1.93 1.93 0 0 1 21 20M9 12q-1.65 0-2.825-1.175T5 8t1.175-2.825T9 4t2.825 1.175T13 8t-1.175 2.825T9 12m10-4q0 1.65-1.175 2.825T15 12q-.275 0-.7-.062a6 6 0 0 1-.7-.138 6 6 0 0 0 1.037-1.775Q15 9.05 15 8t-.363-2.025A6 6 0 0 0 13.6 4.2a3 3 0 0 1 .7-.163Q14.65 4 15 4q1.65 0 2.825 1.175T19 8M3 18h12v-.8a.97.97 0 0 0-.5-.85q-1.35-.675-2.725-1.012a11.6 11.6 0 0 0-5.55 0Q4.85 15.675 3.5 16.35a.97.97 0 0 0-.5.85zm6-8q.825 0 1.412-.588Q11 8.826 11 8q0-.824-.588-1.412A1.93 1.93 0 0 0 9 6q-.825 0-1.412.588A1.93 1.93 0 0 0 7 8q0 .825.588 1.412Q8.175 10 9 10"
            />
          </svg>
          Start a group chat
          <div
            class="mx_SpotlightDialog_option--endAdornment"
          >
            <kbd
              aria-hidden="true"
              class="mx_SpotlightDialog_enterPrompt"
            >
              ↵
            </kbd>
          </div>
        </li>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
